[Wisp] solve crash for the exit with ThreadAsWisp Task
Summary:
For threadAsWisp task:
when the task exits, the threadWrapper is set to null.
Then Thread.currentThread() returns null.

Any operation which uses Thread.currentThread() will cause NPE
or crash.

To solve the issue:
1. avoid class loading during task exit
2. delay that the threadWrapper is set to null

Test Plan: test/jdk/com/alibaba/wisp2/TestWisp2WithGlobalCache.java

Reviewers: 梁希,三红,云矅

Issue: https://work.aone.alibaba-inc.com/issue/23029296

CR: https://code.aone.alibaba-inc.com/xcode/jdk11/codereview/1978724